objects/CustomSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Centralized list of parameters to be modified when refreshing Training or FullDev sandboxes</description>
    <fields>
        <fullName>Blanes_Team_Chatter_Group_ID__c</fullName>
        <label>Blane&apos;s Team Chatter Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_Contract_Admin_Email__c</fullName>
        <label>CB Contract Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CDK_Global_Account_Id__c</fullName>
        <description>Ignore Contact Duplicate Checking for this Account Id. Also, this Account Id is used to set the HR Default Case Account.</description>
        <inlineHelpText>Ignore Contact Duplicate Checking for this Account Id. Also, this Account Id is used to set the HR Default Case Account.</inlineHelpText>
        <label>CDK Global Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_ContactBeforeInsertUpdate_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables (checked) or Disables (unchecked) the Contact Before Insert or Update trigger. This trigger prevents duplicates on Contacts FirstName and LastName or Email.</description>
        <inlineHelpText>Enables (checked) or Disables (unchecked) the Contact Before Insert or Update trigger. This trigger prevents duplicates on Contacts FirstName and LastName or Email.</inlineHelpText>
        <label>DS_ContactBeforeInsertUpdate On?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DS_SalesTeamTrigger_On__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DS Sales Team Trigger On?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocusignBaseURL__c</fullName>
        <description>Docusign URL used for authentications</description>
        <label>DocusignBaseURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Human_Resource_Community__c</fullName>
        <label>Human Resource Community</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Support_Chatter__c</fullName>
        <label>IT Support Chatter</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpactServer__c</fullName>
        <label>ImpactServer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KnowledgeLakeServer__c</fullName>
        <label>KnowledgeLakeServer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAO_DMZ_Web_Service__c</fullName>
        <description>PROD DMZ Web Service URL: https://dslasersync1he.ds.ad.adp.com/Orders/adp.asmx
TEST DMZ Web Service URL: https://dslasersync1he.ds.ad.adp.com/Orders_Test/adp.asmx</description>
        <inlineHelpText>PROD DMZ Web Service URL: https://dslasersync1he.ds.ad.adp.com/Orders/adp.asmx
TEST DMZ Web Service URL: https://dslasersync1he.ds.ad.adp.com/Orders_Test/adp.asmx</inlineHelpText>
        <label>LAO DMZ Web Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Milestone_Threshold__c</fullName>
        <label>Max Milestone Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Milestone_Tree_Threshold__c</fullName>
        <description>This field specifically enables a configurable maximum number of milestone-level tree-node selections within the All_JSTreeBasedNavigator in support of the CDK Expressway Milestone Edit page.</description>
        <label>Max Milestone Tree Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Total_Rec_Count_Threshold__c</fullName>
        <description>The total record count of Project Milestones, Project Activities, and Project Tasks in a given Subproject that can be displayed within a single page.  If the Subproject&apos;s count exceeds this threshold, it auto-initiates pagination.</description>
        <label>Max Total Rec Count Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nondealership_Key_Rep_ID__c</fullName>
        <label>Nondealership Key Rep ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Community__c</fullName>
        <label>Procurement Community</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_Request_Link__c</fullName>
        <label>RMS Request Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SAPortal__c</fullName>
        <label>SAPortal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAWebServer__c</fullName>
        <label>SAWebServer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Instance_Identifier__c</fullName>
        <inlineHelpText>3 character code identifier to tell what instance this record was originally created in.</inlineHelpText>
        <label>SF Instance Identifier</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Instance_Link__c</fullName>
        <label>SF Instance Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SQTServer__c</fullName>
        <label>SQTServer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Debug__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Toggle debug logs on/off</description>
        <inlineHelpText>Toggle debug logs on/off</inlineHelpText>
        <label>Show Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Users_Excluded_from_Business_Rules__c</fullName>
        <inlineHelpText>Users to exclude from select validation rules and trigger logic, delimited by semi-colon.</inlineHelpText>
        <label>Users Excluded from Business Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebIDTriggers_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WebID Triggers On?</label>
        <type>Checkbox</type>
    </fields>
    <label>CustomSettings</label>
</CustomObject>